openshift/builder-image-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lpic3-web
  annotations:
    image.openshift.io/triggers: |
      [{"from":{"kind":"ImageStreamTag","name":"lpic3-web:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"lpic3-web\")].image","pause":"false"}]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lpic3-web
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 3
  progressDeadlineSeconds: 600
  template:
    metadata:
      labels:
        app: lpic3-web
    spec:
      containers:
        - name: lpic3-web
          image: lpic3-web:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: lpic3-web
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: lpic3-web
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: lpic3-web
spec:
  to:
    kind: Service
    name: lpic3-web
  port:
    targetPort: http
